Adds tk-framework-desktopserver.

--- a/info.yml
+++ b/info.yml
@@ -25,3 +25,6 @@ description: "Shotgun Support in Shotgun Desktop v2"
 requires_shotgun_version:
 requires_core_version: "v0.18.116"
 
+frameworks:
+  - {"name": "tk-framework-desktopserver", "version": "v1.x.x"}
+
