For #46250, added bake helper.
Added a script which allows to have a _live_ and updatable config in the plugin manifest and turn it into a fully baked config when baking the plugin.
Changed plugin config to pick latest from github.

--- a/plugins/basic/info.yml
+++ b/plugins/basic/info.yml
@@ -22,8 +22,8 @@ base_configuration:
   # always use the latest version available, simply omit the version token.
   # type: app_store
   # name: tk-config-basic
-  type: baked
-  path: /git/tk-config-basic2
+  type: git
+  path: git@github.com:/shotgunsoftware/tk-config-basic2.git
 
 # The Plugin Id helps uniquely identify this plugin and can be
 # used to override and customize it. For more information, see
