--- a/info.yml
+++ b/info.yml
@@ -22,4 +22,4 @@ requires_shotgun_version:
 requires_core_version: "v0.18.130"
 
 frameworks:
-  - {"name": "tk-framework-shotgunutils", "version": "v5.x.x"}
+  - {"name": "tk-framework-shotgunutils", "version": "v5.x.x", "minimum_version": "v5.6.2"}
